Fix <ol> alignment in CSS

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,49 @@ body section {
 Be sure to take pride in your work and organize your styles properly and resolve any 'red lines.'
 */
 
-#student-5 figure {
+#student-5 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: greenyellow;
+  font-size: 14px;
+}
+
+/* #student-5 .ordered-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 2vw;
+} */
+
+  #student-5 .container {
+   text-align: center;
+  }
+
+  #student-5 ol {
+    display: inline-block;
+    text-align: left;
+  }
+
+  #student-5 .align-center {
+    text-align: center;
+  }
+
+#student-5 ol,
+#student-5 p {
+    margin: auto;
+    padding: 0 2vw;
+}
+
+#student-5 ol {
+  list-style-position: inside;
+}
+
+#student-5 p {
+  text-align: center;
+}
+
+#student-5 img {
 
 }
